WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225137
Suppress warnings for %{private}s format specifier
https://bugs.webkit.org/show_bug.cgi?id=225137
Summary
Suppress warnings for %{private}s format specifier
Basuke Suzuki
Reported
2021-04-27 21:21:13 PDT
../../Source/WebKit\NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:3618:170: warning: using 'private' format specifier annotation outside of os_log()/os_trace() [-Wformat] RELEASE_LOG_ERROR_IF_ALLOWED(m_sessionID, "%p - ResourceLoadStatisticsDatabaseStore::markAttributedPrivateClickM easurementsAsExpiredForTesting, error message: %{private}s", this, m_database.lastErrorMsg()); ~~^~~~~~~~~
Attachments
PATCH
(73.17 KB, patch)
2021-04-27 21:31 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
PATCH
(77.70 KB, patch)
2021-04-27 21:58 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2021-04-27 21:31:52 PDT
Created
attachment 427235
[details]
PATCH
Basuke Suzuki
Comment 2
2021-04-27 21:58:40 PDT
Created
attachment 427236
[details]
PATCH
EWS
Comment 3
2021-04-28 16:22:26 PDT
Committed
r276740
(
237140@main
): <
https://commits.webkit.org/237140@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427236
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-04-28 16:23:18 PDT
<
rdar://problem/77291122
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug